@@ -1,6 +1,7 @@
 0.3.1
 -----
-1. Force "xcb" platform when running under GNOME.
+1. Force 'xcb' platform when running under GNOME.
+2. Add '--startmax' commandline switch to force starting maximised.
 
 0.3.0
 -----
